infra/visibility/jaeger-cluster/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jaeger
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.frontend.rule.type: PathPrefixStrip
    #traefik.ingress.kubernetes.io/redirect-entry-point: https
    #traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
    - host: jaeger.kubernetes.local
      http:
        paths:
          - path: /
            backend:
              serviceName: simple-prod-query
              servicePort: 16686
